test(auth): assert ownership is fetched once across shared-context evaluations
Instruments the OWNER FieldResolver with an invocation counter and evaluates an
ownership-based policy twice against the same ResolvedEntitySpec. The supplier
runs exactly once, proving FieldResolver.fieldValuesFuture memoization supersedes
the removed PolicyEvaluationContext.resourceOwnersByUrn cache.

Co-Authored-By: Claude <noreply@anthropic.com>